fixed album covers

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,6 @@
 body {
+  font-size: 16px;
+  color: #f2f2f2;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,9 +12,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-.flex {
-  display: flex;
-  flex-wrap: wrap;
 }
